tests/rosetta/out/Go/add-a-variable-to-a-class-instance-at-runtime.error
parse: error[P001]: tests/rosetta/x/Mochi/add-a-variable-to-a-class-instance-at-runtime.mochi:20:28: unexpected token "=" (expected "}")
  --> tests/rosetta/x/Mochi/add-a-variable-to-a-class-instance-at-runtime.mochi:20:28

 20 |     ss.runtimeFields[name] = value
    |                            ^

help:
  Check for a missing `{` or `}` to close the block.